--- a/usecase/docker-compose.yml
+++ b/usecase/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     image: openkorp/openkorp-device-mpu9250-multi:latest
     network_mode: host
     devices:
-      - /dev/i2c-1:/dev/i2c-1
-    command: "openkorp-device-mpu9250 --cid=111 --freq=1 --dev=/dev/i2c-1 --id=0"
+      - /dev/i2c-2:/dev/i2c-2
+    command: "openkorp-device-mpu9250 --cid=111 --freq=1 --dev=/dev/i2c-2 --id=0 --verbose=1"
