--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -18,8 +18,8 @@ RUN apk update && \
     apk --no-cache add \
         cmake \
         g++ \
-        # upx \ #causes segmentaiton fault
-        ccache \
+        # upx \ #causes segmentation fault
+        # ccache \
         ncurses-dev \
         git \
         make \
@@ -27,6 +27,7 @@ RUN apk update && \
 
 RUN apk add libcluon --no-cache --repository https://chrberger.github.io/libcluon/alpine/v3.7 --allow-untrusted
 
+VOLUME /root/.ccache
 
 ADD src /opt/sources/src
 ADD thirdparty /opt/sources/thirdparty
@@ -35,21 +36,21 @@ ADD CMakeLists.txt /opt/sources
 
 WORKDIR /opt/sources
 
-RUN mkdir build && \
-    cd build && \
-    cmake -D CMAKE_BUILD_TYPE=Release -D CMAKE_INSTALL_PREFIX=/tmp/openkorp-device-mpu9250-dest .. && \
-    make -j4  && make install 
-    # && upx -9 /tmp/openkorp-device-mpu9250-dest/bin/openkorp-device-mpu9250
+# RUN mkdir build && \
+#     cd build && \
+#     cmake -D CMAKE_BUILD_TYPE=Release -D CMAKE_INSTALL_PREFIX=/tmp/openkorp-device-mpu9250-dest .. && \
+#     make -j4  && make install 
+#     # && upx -9 /tmp/openkorp-device-mpu9250-dest/bin/openkorp-device-mpu9250
 
-FROM alpine:edge
-LABEL authors="Björnborg Nguyen"
+# FROM alpine:edge
+# LABEL authors="Björnborg Nguyen"
 
-RUN apk update && \
-    apk --no-cache add \
-    ncurses-dev 
+# RUN apk update && \
+#     apk --no-cache add \
+#     ncurses-dev 
 
-WORKDIR /usr/bin
-COPY --from=builder /tmp/openkorp-device-mpu9250-dest/ /usr/
-CMD ["/usr/bin/openkorp-device-mpu9250"]
+# WORKDIR /usr/bin
+# COPY --from=builder /tmp/openkorp-device-mpu9250-dest/ /usr/
+# CMD ["/usr/bin/openkorp-device-mpu9250"]
 
 
